--- a/ECommerce_Fabrics.Services/ECommerce_Fabrics.Services.csproj
+++ b/ECommerce_Fabrics.Services/ECommerce_Fabrics.Services.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategroyService.cs" />
+    <Compile Include="ProductsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
